<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_history">History</string>
    <string name="app_keep">Keep</string>
    <string name="app_name">山东IPTV点播</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_fail">Backup failed</string>
    <string name="backup_success">Backup successful</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="control_other">Other</string>
    <string name="control_scale">Scale</string>
    <string name="control_speed">Speed</string>
    <string name="control_track">Track</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="crash_details">Error details</string>
    <string name="crash_details_close">Close</string>
    <string name="crash_details_title">Error details</string>
    <string name="crash_info">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="crash_restart">Restart app</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="danmaku">Danmaku</string>
    <string name="danmaku_select">Select danmaku</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="define_zxingandroidembedded" />
    <string name="detail_actor">Actor: %s</string>
    <string name="detail_area">Area: %s</string>
    <string name="detail_content">Summary</string>
    <string name="detail_director">Director: %s</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_flag">Flag</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_search">Searching %s</string>
    <string name="detail_site">Site: %s</string>
    <string name="detail_title" formatted="false">%s : %s</string>
    <string name="detail_type">Type: %s</string>
    <string name="detail_year">Year: %s</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>
    <string name="device_select">Select devices</string>
    <string name="dialog_config_hint">Please enter the config…</string>
    <string name="dialog_config_name">Please enter the name…</string>
    <string name="dialog_config_url">Please enter the url…</string>
    <string name="dialog_delete_history">All history records will be removed.</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_positive">OK</string>
    <string name="disclaimer_agree">同意并进入</string>
    <string name="disclaimer_exit">退出</string>
    <string name="disclaimer_message">本软件仅供个人学习研究使用，严禁用于商业用途。\n\n所有音视频内容均来自网络，本软件不提供、不存储任何音视频内容，对内容的合法性、准确性、完整性不作任何保证。\n\n使用本软件所产生的一切法律责任由使用者自行承担，与开发者无关。\n\n如果您不同意以上声明，请立即退出并删除本软件。</string>
    <string name="disclaimer_title">免责声明</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_config_get">Configuration get failed</string>
    <string name="error_detail">No play data</string>
    <string name="error_empty">Nothing here ��</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message_authentication_expired">Sign in to use this app</string>
    <string name="error_message_bad_value">Incorrect input data</string>
    <string name="error_message_concurrent_stream_limit">Listening on too many devices</string>
    <string name="error_message_content_already_playing">Already playing that content</string>
    <string name="error_message_disconnected">Disconnected from media app</string>
    <string name="error_message_end_of_playlist">Nothing else is queued up</string>
    <string name="error_message_fallback">Something’s wrong. Try later.</string>
    <string name="error_message_info_cancelled">Couldn’t finish. Try again.</string>
    <string name="error_message_invalid_state">Can’t do that right now</string>
    <string name="error_message_io">Input/output error</string>
    <string name="error_message_not_available_in_region">Can’t get that content here</string>
    <string name="error_message_not_supported">This app can’t do that</string>
    <string name="error_message_parental_control_restricted">That content is blocked</string>
    <string name="error_message_permission_denied">Access denied</string>
    <string name="error_message_premium_account_required">Premium access required</string>
    <string name="error_message_setup_required">Setup required</string>
    <string name="error_message_skip_limit_reached">Can’t skip any more tracks</string>
    <string name="error_play_drm">This device does not support the required DRM scheme</string>
    <string name="error_play_next">It\'s the last episode!</string>
    <string name="error_play_parse">Unable to parse url</string>
    <string name="error_play_prev">It\'s the first episode!</string>
    <string name="error_play_timeout">Timed out</string>
    <string name="error_play_tvbus">Error code: %s</string>
    <string name="error_play_url">Unable to load url</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="play_timer">Timer</string>
    <string name="search_hot">Hot</string>
    <string name="search_keyword">Keywords…</string>
    <string name="search_record">History</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_5">5 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_cancel">Cancel timer</string>
    <string name="timer_delay">Add 5 minutes</string>
</resources>