<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/menu_search"
        app:navigationIconTint="@android:color/white">
        <androidx.appcompat.widget.AppCompatEditText
            android:textAppearance="@style/ToolbarTextAppearance"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/keyword"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_keyword"
            android:singleLine="true"
            android:maxLength="255"
            android:inputType="textAutoComplete"
            android:imeOptions="actionSearch"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:layout_marginStart="4dp"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/search_record"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recordRecycler"
                android:paddingBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:nestedScrollingEnabled="false"/>
            <com.google.android.material.textview.MaterialTextView
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/search_hot"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wordRecycler"
                android:paddingBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-8dp"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:nestedScrollingEnabled="false"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
